argocd/platform/kratos/base/httproute-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kratos-admin
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - kratos-admin.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: kratos-admin
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
